--- a/boleta-web/src/main/webapp/resources/template/template.xhtml
+++ b/boleta-web/src/main/webapp/resources/template/template.xhtml
@@ -14,7 +14,7 @@
             <meta name="apple-mobile-web-app-capable" content="yes" />
             <link href="#{request.contextPath}/resources/images/favicon.png" rel="shortcut icon"/>
         </f:facet>
-        <title>Sistema de Paquetes Escolares</title>
+        <title>Envío de boleta de pago</title>
         <h:outputScript name="js/nanoscroller.js" library="paradise-layout" />
         <h:outputScript name="js/layout.js" library="paradise-layout" />
         <h:outputScript name="calendar-localization.js" library="js"/>
@@ -44,10 +44,6 @@
 
 
         <div class="layout-wrapper #{guestPreferences.slimMenu ? 'layout-menu-slim' : (guestPreferences.overlayMenu ? 'layout-menu-overlay' : 'layout-menu-static')}">
-            <p:growl id="growl" showDetail="true" escape="false" sticky="true" >
-                <p:autoUpdate />
-            </p:growl>
-
             <p:ajaxStatus>
                 <f:facet name="default">
 
