--- a/boleta-web/src/main/webapp/resources/template/topbar.xhtml
+++ b/boleta-web/src/main/webapp/resources/template/topbar.xhtml
@@ -23,6 +23,12 @@
             <br/><p:outputLabel style="font-size: 18px; color: black; font-family: 'Bembo Std';" value="Envío de boleta de pagos"/>
         </div>
 
+
+        <div id="user-display" style="padding-top: 1px; text-align: right;">
+            
+                <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{guestPreferences.logout}"/>
+            
+        </div>
     </div>
 
     <style type="text/css">
