--- a/boleta-web/src/main/webapp/resources/paradise-layout/css/layout-default.css
+++ b/boleta-web/src/main/webapp/resources/paradise-layout/css/layout-default.css
@@ -892,7 +892,7 @@ body {
     transition: color 0.3s;
     font-size: 16px;
     vertical-align: middle;
-    color: #757575; }
+    }
 .layout-wrapper .topbar #user-display:hover .username, .layout-wrapper .topbar #user-display:hover .fa {
     color: #4f4f4f; }
 .layout-wrapper .topbar #menu-button {
