--- a/boleta-web/src/main/webapp/resources/template/topbar.xhtml
+++ b/boleta-web/src/main/webapp/resources/template/topbar.xhtml
@@ -25,9 +25,8 @@
 
 
         <div id="user-display" style="padding-top: 1px; text-align: right;">
-            
-                <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{guestPreferences.logout}"/>
-            
+            <p:commandButton icon="fa fa-home" value="Menu" action="menu.mined" />
+            <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{guestPreferences.logout}"/>
         </div>
     </div>
 
