--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUniforme2019Jur.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUniforme2019Jur.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptContratoPersonaJuridicaZapatos" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="d8a009d1-1894-4374-bb30-ceae652bb660">
-	<property name="ireport.zoom" value="1.2396694214876076"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.zoom" value="3.890613690150017"/>
+	<property name="ireport.x" value="124"/>
+	<property name="ireport.y" value="809"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -297,9 +297,9 @@ concat("\"\nFUENTE DE FINANCIAMIENTO: GOES")]]></textFieldExpression>
 	<group name="detalle">
 		<groupExpression><![CDATA[$F{NOMBRE}]]></groupExpression>
 		<groupHeader>
-			<band height="22" splitType="Stretch">
+			<band height="40" splitType="Stretch">
 				<componentElement>
-					<reportElement uuid="fc463159-f1e5-4716-b166-344f0b15d454" key="table 1" style="table_TD" x="35" y="5" width="423" height="17"/>
+					<reportElement uuid="fc463159-f1e5-4716-b166-344f0b15d454" key="table 1" style="table_TD" x="35" y="39" width="423" height="1"/>
 					<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 						<datasetRun subDataset="dsDetalle" uuid="5b38cc07-8ef2-4aed-9027-0e7e22c44cb5">
 							<datasetParameter name="idResolucionAdj">
@@ -318,15 +318,6 @@ concat("\"\nFUENTE DE FINANCIAMIENTO: GOES")]]></textFieldExpression>
 								</staticText>
 							</jr:columnFooter>
 							<jr:column width="40" uuid="2b4c3a19-3782-4a42-ae80-a0edb238a787">
-								<jr:columnHeader style="table_TD" height="24" rowSpan="1">
-									<staticText>
-										<reportElement uuid="ef60cd38-924b-46a1-aae5-9fca286b1da5" x="0" y="0" width="40" height="24"/>
-										<textElement textAlignment="Center" verticalAlignment="Middle">
-											<font fontName="Arial" size="8" isBold="true"/>
-										</textElement>
-										<text><![CDATA[No Ítem]]></text>
-									</staticText>
-								</jr:columnHeader>
 								<jr:detailCell style="table_TD" height="13" rowSpan="1">
 									<textField>
 										<reportElement uuid="aa013631-c70d-44e4-9554-00598924df98" x="0" y="0" width="40" height="13"/>
@@ -338,15 +329,6 @@ concat("\"\nFUENTE DE FINANCIAMIENTO: GOES")]]></textFieldExpression>
 								</jr:detailCell>
 							</jr:column>
 							<jr:column width="190" uuid="e87139fa-ff39-46e3-a440-9a0aafb75177">
-								<jr:columnHeader style="table_TD" height="24" rowSpan="1">
-									<staticText>
-										<reportElement uuid="fa975340-147b-49dc-be9d-0e317578a134" x="0" y="0" width="190" height="24"/>
-										<textElement textAlignment="Center" verticalAlignment="Middle">
-											<font fontName="Arial" size="8" isBold="true"/>
-										</textElement>
-										<text><![CDATA[Descripción del Ítem]]></text>
-									</staticText>
-								</jr:columnHeader>
 								<jr:detailCell style="table_TD" height="13" rowSpan="1">
 									<textField>
 										<reportElement uuid="1c4bd148-63de-4b5a-a3ce-c5f91b241560" x="1" y="0" width="188" height="13"/>
@@ -359,15 +341,6 @@ concat("\"\nFUENTE DE FINANCIAMIENTO: GOES")]]></textFieldExpression>
 							</jr:column>
 						</jr:columnGroup>
 						<jr:column width="48" uuid="c3056c89-c6e5-49c4-9b7a-54e41051f47f">
-							<jr:columnHeader style="table_TD" height="24" rowSpan="1">
-								<staticText>
-									<reportElement uuid="5cb029a2-27eb-44fe-9a5a-2e86f0d02d3a" x="0" y="0" width="48" height="24"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle">
-										<font fontName="Arial" size="8" isBold="true"/>
-									</textElement>
-									<text><![CDATA[Cantidad]]></text>
-								</staticText>
-							</jr:columnHeader>
 							<jr:columnFooter style="table_TD" height="14" rowSpan="1">
 								<textField pattern="#,##0">
 									<reportElement uuid="b985c543-3f51-4443-98d1-6b71d67b6be9" x="0" y="0" width="48" height="14"/>
@@ -388,15 +361,6 @@ concat("\"\nFUENTE DE FINANCIAMIENTO: GOES")]]></textFieldExpression>
 							</jr:detailCell>
 						</jr:column>
 						<jr:column width="59" uuid="ceca2612-19f9-4622-a1f5-e971f3be3c8c">
-							<jr:columnHeader style="table_TD" height="24" rowSpan="1">
-								<staticText>
-									<reportElement uuid="173fcf03-ea90-447f-8cd1-6a1bd5c8d6dc" x="0" y="0" width="59" height="24"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle">
-										<font fontName="Arial" size="8" isBold="true"/>
-									</textElement>
-									<text><![CDATA[Precio Unit.]]></text>
-								</staticText>
-							</jr:columnHeader>
 							<jr:columnFooter style="table_TD" height="14" rowSpan="1"/>
 							<jr:detailCell style="table_TD" height="13" rowSpan="1">
 								<textField pattern="#,##0.00">
@@ -422,15 +386,6 @@ concat("\"\nFUENTE DE FINANCIAMIENTO: GOES")]]></textFieldExpression>
 							</jr:detailCell>
 						</jr:column>
 						<jr:column width="84" uuid="d911643b-ade9-49d6-bfbc-531d5e1c311d">
-							<jr:columnHeader style="table_TD" height="24" rowSpan="1">
-								<staticText>
-									<reportElement uuid="11561727-1afd-4587-ab6f-35e853009f39" x="11" y="0" width="62" height="24"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle">
-										<font fontName="Arial" size="8" isBold="true"/>
-									</textElement>
-									<text><![CDATA[Monto Total (Incluye IVA)]]></text>
-								</staticText>
-							</jr:columnHeader>
 							<jr:columnFooter style="table_TD" height="14" rowSpan="1">
 								<textField pattern="#,##0.00">
 									<reportElement uuid="969b2900-31ed-4d33-9bee-442d8cfadbb3" x="11" y="0" width="71" height="14"/>
@@ -478,6 +433,41 @@ concat("\"\nFUENTE DE FINANCIAMIENTO: GOES")]]></textFieldExpression>
 						</jr:column>
 					</jr:table>
 				</componentElement>
+				<staticText>
+					<reportElement uuid="f004ebed-ede7-4cd5-99be-7cb8e550cb29" style="table_TD" x="265" y="13" width="48" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Cantidad]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="f52b5324-27d3-4b50-b134-cc1e4f4ae913" style="table_TD" x="35" y="13" width="40" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[No Ítem]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="ad3af154-24f0-4868-a50b-97d9626d7aa5" style="table_TD" x="75" y="13" width="190" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Descripción del Ítem]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="e82af698-5ed9-4a6c-a97f-4d8be8c0d964" style="table_TD" x="313" y="13" width="59" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Precio Unit.]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="70128808-3f92-4226-9caf-948533cfcd9f" style="table_TD" x="372" y="13" width="84" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Monto Total (Incluye IVA)]]></text>
+				</staticText>
 			</band>
 		</groupHeader>
 		<groupFooter>
