--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUniforme2019Nat.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUniforme2019Nat.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptContratoPersonaNaturalZapatos" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="b3d27ee3-cc8d-4284-9900-697f3963c735">
-	<property name="ireport.zoom" value="1.366026910730141"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="96"/>
+	<property name="ireport.zoom" value="1.5026296018031564"/>
+	<property name="ireport.x" value="49"/>
+	<property name="ireport.y" value="283"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -333,12 +333,12 @@ concat(") IVA INCLUIDO; así mismo a dicho precio se le harán las retenciones d
 			</band>
 		</groupFooter>
 	</group>
-	<group name="detalle">
+	<group name="detalle" minHeightToStartNewPage="20">
 		<groupExpression><![CDATA[$F{NOMBRE}]]></groupExpression>
 		<groupHeader>
-			<band height="21" splitType="Stretch">
+			<band height="33" splitType="Stretch">
 				<componentElement>
-					<reportElement uuid="9f6eda63-3937-4b7c-8014-ea7b5b8a13ec" key="table 1" style="table 1_TD" x="56" y="4" width="423" height="17"/>
+					<reportElement uuid="9f6eda63-3937-4b7c-8014-ea7b5b8a13ec" key="table 1" style="table 1_TD" x="56" y="32" width="423" height="1"/>
 					<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 						<datasetRun subDataset="dsDetalle" uuid="0fd94d9f-b897-4c36-b1c1-22d112e1be13">
 							<datasetParameter name="idResolucionAdj">
@@ -357,15 +357,6 @@ concat(") IVA INCLUIDO; así mismo a dicho precio se le harán las retenciones d
 								</staticText>
 							</jr:columnFooter>
 							<jr:column width="40" uuid="ae1e7a98-59e2-4d0c-8646-67ac1fc514c3">
-								<jr:columnHeader style="table_TD" height="26" rowSpan="1">
-									<staticText>
-										<reportElement uuid="f52b5324-27d3-4b50-b134-cc1e4f4ae913" x="0" y="0" width="40" height="26"/>
-										<textElement textAlignment="Center" verticalAlignment="Middle">
-											<font fontName="Arial" size="8" isBold="true"/>
-										</textElement>
-										<text><![CDATA[No Ítem]]></text>
-									</staticText>
-								</jr:columnHeader>
 								<jr:detailCell style="table 1_TD" height="13" rowSpan="1">
 									<textField>
 										<reportElement uuid="50a90186-ebeb-49a0-82df-d92d7657619c" x="0" y="0" width="40" height="13"/>
@@ -377,15 +368,6 @@ concat(") IVA INCLUIDO; así mismo a dicho precio se le harán las retenciones d
 								</jr:detailCell>
 							</jr:column>
 							<jr:column width="190" uuid="7e933a8a-421f-4c7c-b4bc-2f18587ad999">
-								<jr:columnHeader style="table_TD" height="26" rowSpan="1">
-									<staticText>
-										<reportElement uuid="ad3af154-24f0-4868-a50b-97d9626d7aa5" x="0" y="0" width="190" height="26"/>
-										<textElement textAlignment="Center" verticalAlignment="Middle">
-											<font fontName="Arial" size="8" isBold="true"/>
-										</textElement>
-										<text><![CDATA[Descripción del Ítem]]></text>
-									</staticText>
-								</jr:columnHeader>
 								<jr:detailCell style="table 1_TD" height="13" rowSpan="1">
 									<textField>
 										<reportElement uuid="d6e97019-7dfa-4a42-bf80-487f2c735a58" x="1" y="0" width="188" height="13"/>
@@ -398,15 +380,6 @@ concat(") IVA INCLUIDO; así mismo a dicho precio se le harán las retenciones d
 							</jr:column>
 						</jr:columnGroup>
 						<jr:column width="48" uuid="1a1b37db-08e0-48ff-a17e-bd5c9c9952c8">
-							<jr:columnHeader style="table_TD" height="26" rowSpan="1">
-								<staticText>
-									<reportElement uuid="f004ebed-ede7-4cd5-99be-7cb8e550cb29" x="0" y="0" width="48" height="26"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle">
-										<font fontName="Arial" size="8" isBold="true"/>
-									</textElement>
-									<text><![CDATA[Cantidad]]></text>
-								</staticText>
-							</jr:columnHeader>
 							<jr:columnFooter style="table_TD" height="14" rowSpan="1">
 								<textField pattern="#,##0">
 									<reportElement uuid="fd5c6c81-7c44-4c3c-bb81-7c78ccb00179" x="0" y="0" width="48" height="14"/>
@@ -427,15 +400,6 @@ concat(") IVA INCLUIDO; así mismo a dicho precio se le harán las retenciones d
 							</jr:detailCell>
 						</jr:column>
 						<jr:column width="59" uuid="5e93de6b-caa5-4df2-8cfc-0d7eaf7b6691">
-							<jr:columnHeader style="table_TD" height="26" rowSpan="1">
-								<staticText>
-									<reportElement uuid="e82af698-5ed9-4a6c-a97f-4d8be8c0d964" x="0" y="0" width="59" height="26"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle">
-										<font fontName="Arial" size="8" isBold="true"/>
-									</textElement>
-									<text><![CDATA[Precio Unit.]]></text>
-								</staticText>
-							</jr:columnHeader>
 							<jr:columnFooter style="table_TD" height="14" rowSpan="1"/>
 							<jr:detailCell style="table 1_TD" height="13" rowSpan="1">
 								<textField pattern="#,##0.00">
@@ -461,15 +425,6 @@ concat(") IVA INCLUIDO; así mismo a dicho precio se le harán las retenciones d
 							</jr:detailCell>
 						</jr:column>
 						<jr:column width="84" uuid="7eb9c674-6dcd-401f-b519-823f7fcebc15">
-							<jr:columnHeader style="table_TD" height="26" rowSpan="1">
-								<staticText>
-									<reportElement uuid="70128808-3f92-4226-9caf-948533cfcd9f" x="12" y="0" width="59" height="26"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle">
-										<font fontName="Arial" size="8" isBold="true"/>
-									</textElement>
-									<text><![CDATA[Monto Total (Incluye IVA)]]></text>
-								</staticText>
-							</jr:columnHeader>
 							<jr:columnFooter style="table_TD" height="14" rowSpan="1">
 								<textField pattern="#,##0.00">
 									<reportElement uuid="92e9f26d-3d77-4544-8bbe-c96647eaebfa" x="11" y="0" width="71" height="14"/>
@@ -517,6 +472,41 @@ concat(") IVA INCLUIDO; así mismo a dicho precio se le harán las retenciones d
 						</jr:column>
 					</jr:table>
 				</componentElement>
+				<staticText>
+					<reportElement uuid="f004ebed-ede7-4cd5-99be-7cb8e550cb29" style="table_TD" x="286" y="6" width="48" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Cantidad]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="70128808-3f92-4226-9caf-948533cfcd9f" style="table_TD" x="393" y="6" width="84" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Monto Total (Incluye IVA)]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="f52b5324-27d3-4b50-b134-cc1e4f4ae913" style="table_TD" x="56" y="6" width="40" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[No Ítem]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="e82af698-5ed9-4a6c-a97f-4d8be8c0d964" style="table_TD" x="334" y="6" width="59" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Precio Unit.]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="ad3af154-24f0-4868-a50b-97d9626d7aa5" style="table_TD" x="96" y="6" width="190" height="26"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Descripción del Ítem]]></text>
+				</staticText>
 			</band>
 		</groupHeader>
 		<groupFooter>
