Previo a cambios en el modulo de modificativas

--- a/paquescolar-web/src/main/webapp/resources/css/personalizadas.css
+++ b/paquescolar-web/src/main/webapp/resources/css/personalizadas.css
@@ -358,3 +358,10 @@ body .ui-widget-header {
     font-weight: bold;
     font-size: 13px;
 }
+
+body .ui-state-disabled {
+  opacity: .35;
+  filter: Alpha(Opacity=35);
+  background-image: none;
+  -webkit-text-fill-color: #880000;
+  }
