--- a/paquescolar-web/src/main/webapp/resources/template/template.xhtml
+++ b/paquescolar-web/src/main/webapp/resources/template/template.xhtml
@@ -115,11 +115,19 @@
     </h:head>
 
     <h:body >
-        <p:idleMonitor onactive="PF('sessionTimeOutDialog').show();" timeout="600000" >
-            <p:ajax event="active" listener="#{guestPreferences.logout}"/>
-        </p:idleMonitor>
+        <h:form>
+            <p:idleMonitor onactive="PF('sessionTimeOutDialog').show();" timeout="#{monitorDeSessionMB.sessionTimeOut}" >
+                <p:confirmDialog id="sessionTimeOutDialog"
+                                 message="La sesión a caducado por inactividad, por favor, pulse sobre el siguiente botón para volver a acceder a la aplicación" closable="false"
+                                 header="Sesión finalizada" widgetVar="sessionTimeOutDialog">
+                    <p:commandButton id="Logout" value="Iniciar sesión"
+                                     icon="fa fa-sign-out" ajax="false"
+                                     action="#{monitorDeSessionMB.cerrarSession()}" />
+                </p:confirmDialog>
+            </p:idleMonitor>
+        </h:form>
 
-        <p:dialog header="Sesión caducada" id="sessionTimeOutDialog" widgetVar="sessionTimeOutDialog" resizable="false" draggable="false"
+        <!--p:dialog header="Sesión caducada" id="sessionTimeOutDialog" widgetVar="sessionTimeOutDialog" resizable="false" draggable="false"
                   modal="true" closable="false" width="400" visible="false">
             <h:panelGrid columns="1" style="text-align: center;">
                 <h:panelGrid columns="3">
@@ -129,9 +137,9 @@
                 </h:panelGrid>
             </h:panelGrid>
             <f:facet name="footer">
-                <p:commandButton id="confirmBackToLogin" type="button" value="Iniciar sesión" onclick="window.location = '#{request.contextPath}/index.mined';" />
+                <p:commandButton id="confirmBackToLogin" type="button" value="Iniciar sesión" onclick="window.location = '{request.contextPath}/index.mined';" />
             </f:facet>
-        </p:dialog>
+        </p:dialog-->
 
 
         <div class="layout-wrapper #{guestPreferences.slimMenu ? 'layout-menu-slim' : (guestPreferences.overlayMenu ? 'layout-menu-overlay' : 'layout-menu-static')}">
