--- a/paquescolar-web/src/main/webapp/resources/template/template2.xhtml
+++ b/paquescolar-web/src/main/webapp/resources/template/template2.xhtml
@@ -19,153 +19,59 @@
         <h:outputScript name="js/layout.js" library="paradise-layout" />
         <h:outputScript name="funciones-1.js" library="js"/>
         <h:outputScript name="calendar-localization.js" library="js"/>
+
         <ui:insert name="head"/>
-        <style>
-            
-        </style>
-        <script type="text/javascript">
-            function skinDonut() {
-                this.cfg.shadow = false;
-                this.cfg.title = '';
-                this.cfg.seriesColors = ['#3984b8', '#f6ac2b', '#7e8dcd', '#39b8b6'];
-                this.cfg.grid = {
-                    background: '#ffffff',
-                    borderColor: '#ffffff',
-                    gridLineColor: '#dce2e7',
-                    shadow: false
-                };
-                this.cfg.axesDefaults = {
-                    rendererOptions: {
-                        textColor: '#757575',
-                    }
-                };
-                this.cfg.seriesDefaults = {
-                    renderer: $.jqplot.DonutRenderer,
-                    shadow: false,
-                    lineWidth: 1,
-                    markerOptions: {
-                        shadow: false,
-                        size: 7,
-                        style: 'circle'
-                    }
-                }
-            }
-
-            function skinBar() {
-                this.cfg.shadow = false;
-                this.cfg.title = '';
-                this.cfg.seriesColors = ['#3984b8', '#f6ac2b'];
-                this.cfg.grid = {
-                    background: '#ffffff',
-                    borderColor: '#ffffff',
-                    gridLineColor: '#dce2e7',
-                    shadow: false
-                };
-                this.cfg.axesDefaults = {
-                    borderWidth: 0.1,
-                    borderColor: 'bdc3c9',
-                    rendererOptions: {
-                        textColor: '#757575'
-                    }
-                };
-                this.cfg.seriesDefaults = {
-                    shadow: false,
-                    lineWidth: 1,
-                    renderer: $.jqplot.BarRenderer,
-                    markerOptions: {
-                        shadow: false,
-                        size: 7,
-                        style: 'circle'
-                    }
-                };
-            }
-
-            function skinPie() {
-                this.cfg.shadow = false;
-                this.cfg.title = '';
-                this.cfg.seriesColors = ['#3984b8', '#f6ac2b', '#7e8dcd', '#39b8b6'];
-                this.cfg.grid = {
-                    background: '#ffffff',
-                    borderColor: '#ffffff',
-                    gridLineColor: '#dce2e7',
-                    shadow: false
-                };
-                this.cfg.axesDefaults = {
-                    rendererOptions: {
-                        textColor: '#757575',
-                    }
-                };
-                this.cfg.seriesDefaults = {
-                    renderer: $.jqplot.PieRenderer,
-                    shadow: false,
-                    lineWidth: 1,
-                    markerOptions: {
-                        shadow: false,
-                        size: 7,
-                        style: 'circle'
-                    }
-                };
-            }
-
-            function exportChart(grafico1, grafico2) {
-                //export image
-                $('#output').empty().append(PF(grafico1).exportAsImage()).append(PF(grafico2).exportAsImage());
-
-                //show the dialog
-                PF('dlg').show();
-            }
-        </script>
     </h:head>
 
-    <h:body>
-        <p:idleMonitor onactive="PF('sessionTimeOutDialog').show();" timeout="600000" >
-            <p:ajax event="active" listener="#{personaController.logout}"/>
-        </p:idleMonitor>
-
-        <p:dialog header="Sesión caducada" id="sessionTimeOutDialog" widgetVar="sessionTimeOutDialog" resizable="false" draggable="false"
-                  modal="true" closable="false" width="400" visible="false">
-            <h:panelGrid columns="1" style="text-align: center;">
-                <h:panelGrid columns="3">
-                    <h:outputText value="La sesión a caducado por inactividad, por favor, pulse sobre el siguiente botón para volver a acceder a la aplicación" />
-                    <p:spacer width="10" height="8"/>
-                    <i class="fa fa-chain-broken" style="color: blue; font-size: 25px;" aria-hidden="true"></i>
-                </h:panelGrid>
-            </h:panelGrid>
-            <f:facet name="footer">
-                <p:commandButton id="confirmBackToLogin" type="button" value="Iniciar sesión" onclick="window.location = '#{request.contextPath}/index.mined';" />
-            </f:facet>
-        </p:dialog>
-
+    <h:body >
+        <h:form>
+            <p:idleMonitor onactive="PF('sessionTimeOutDialog').show();" timeout="#{monitorDeSessionMB.sessionTimeOut}" >
+                <p:confirmDialog id="sessionTimeOutDialog"
+                                 message="La sesión a caducado por inactividad, por favor, pulse sobre el siguiente botón para volver a acceder a la aplicación" closable="false"
+                                 header="Sesión finalizada" widgetVar="sessionTimeOutDialog">
+                    <p:commandButton id="Logout" value="Iniciar sesión"
+                                     icon="fa fa-sign-out" ajax="false"
+                                     action="#{monitorDeSessionMB.cerrarSession()}" />
+                </p:confirmDialog>
+            </p:idleMonitor>
+        </h:form>
 
         <div class="layout-wrapper #{guestPreferences.slimMenu ? 'layout-menu-slim' : (guestPreferences.overlayMenu ? 'layout-menu-overlay' : 'layout-menu-static')}">
             <p:growl id="growl" showDetail="true" escape="false" sticky="true" >
                 <p:autoUpdate />
             </p:growl>
+
+            <p:ajaxStatus>
+                <f:facet name="default">
+
+                </f:facet>
+                <f:facet name="start">
+                    <div id="div_modal" class="layout-content ui-widget-overlay ui-dialog-mask" style="z-index: 1000;"></div>
+                    <div id="ajax_gif" class="ui-tooltip-text ui-corner-all ui-shadow">
+                        <i class="fa fa-refresh fa-spin ajax-loader" aria-hidden="true" 
+                           style="color: #349ffb; font-size: 36px; display: block;  position: relative;  top: 18%;  transform: translateY(-18%);"></i>
+                    </div>
+                </f:facet>
+
+                <f:facet name="complete">
+                    <h:outputText value="" />
+                </f:facet>
+            </p:ajaxStatus>
+
             <h:form id="frmTopBar">
                 <ui:include src="./topbar.xhtml" />
             </h:form>
 
             <div class="layout-main">
-                <div class="layout-content" style="position: relative; margin-left: 0px !important;">
+                <div style="padding: 8px;
+                     margin-top: 70px;
+                     -moz-transition: margin-left 0.3s;
+                     -o-transition: margin-left 0.3s;
+                     -webkit-transition: margin-left 0.3s;
+                     transition: margin-left 0.3s;">
                     <h:form id="frmPrincipal" prependId="false" >
                         <ui:insert name="content"/>
                     </h:form>
-
-                    <p:ajaxStatus>
-                        <f:facet name="default">
-                        </f:facet>
-                        <f:facet name="start">
-                            <div id="div_modal" class="layout-content ui-widget-overlay ui-dialog-mask" style="z-index: 900;"></div>
-                            <div id="ajax_gif" class="ui-tooltip-text ui-corner-all ui-shadow">
-                                <i class="fa fa-refresh fa-spin ajax-loader" aria-hidden="true" 
-                                   style="color: #349ffb; font-size: 36px; display: block;  position: relative;  top: 18%;  transform: translateY(-18%);"></i>
-                            </div>
-                        </f:facet>
-
-                        <f:facet name="complete">
-                            <h:outputText value="" />
-                        </f:facet>
-                    </p:ajaxStatus>
                 </div>
             </div>    
         </div>
@@ -174,57 +80,6 @@
         <h:outputStylesheet name="css/animate.css" library="paradise-layout" />
         <h:outputStylesheet name="css/layout-default.css" library="paradise-layout" />
 
-        <p:dialog id="exceptionDialog" header="A ocurrido un error!" widgetVar="exceptionDialog" width="800" height="200"
-                  modal="true" showEffect="puff" hideEffect="puff">
-            <p:panelGrid id="pnl" columns="2" columnClasses="col2,col10" 
-                         style="width: 100%; border:0px none; background-color:transparent;"
-                         styleClass="form-group ui-panelgrid-blank">
-                <p:graphicImage name="error-icon.png" library="images"/>
-                <p:panelGrid  style="width: 100%; border:0px none; background-color:transparent;"
-                              styleClass="form-group ui-panelgrid-blank">
-                    <p:row>
-                        <p:column>
-                            <b>Tipo de Excepción: </b>
-                            <p:outputLabel value="#{pfExceptionHandler.type}"/>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column>
-                            <b>Origen: </b>
-                            <p:outputLabel value="#{pfExceptionHandler.stackTrace[1]}"/>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column>
-                            <b>Hora y fecha: </b>
-                            <p:outputLabel value="#{pfExceptionHandler.formattedTimestamp}"/>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column>
-                            <b>Clase: </b>
-                            <p:outputLabel value="#{pfExceptionHandler.stackTrace[1].className}"/>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column>
-                            <b>Nombre del método: </b>
-                            <p:outputLabel value="#{pfExceptionHandler.stackTrace[0].methodName}"/>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column>
-                            <b>Linea: </b>
-                            <p:outputLabel value="#{pfExceptionHandler.stackTrace[0].lineNumber}"/>
-                        </p:column>
-                    </p:row>
-                </p:panelGrid>
-            </p:panelGrid>
-            <f:facet name="footer">
-                <p:commandButton value="Cerrar" icon="fa fa-window-close" onclick="PF('exceptionDialog').hide();"/>
-                <p:commandButton value="Ver Detalle" icon="fa fa-eye" rendered="false"/>
-            </f:facet>
-        </p:dialog>        
     </h:body>
 
 </html>
